create API endpoints to query people groups.
